<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.expressobits.hbusgenerator.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_read_all_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_file_all_data"/>

        <Button
            android:id="@+id/button_save_in_database_all_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_in_database_file_all_data"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_read_data_itineraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_data_itineraries"
                android:enabled="false"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_cities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_push_all_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_all_data"/>

        <Button
            android:id="@+id/button_delete_all_data_firebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_all_data_itineraries_on_firebase"/>

    </LinearLayout>
</RelativeLayout>
